refined HTML and CSS
refined and "prettyfied"

--- a/Landing_1/index.html
+++ b/Landing_1/index.html
@@ -11,12 +11,12 @@
 
 <body>
     <section>
-        <div class="bg__overlay"></div>
-        <img src="background.jpg" alt="">
-        <div class="text__box">
-            <h1>Landing Page 1</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae magnam expedita amet, sed numquam accusamus tempora modi labore eos ipsa maxime unde repudiandae cum aliquid, necessitatibus exercitationem, cumque eveniet aperiam.</p>
-            <button>More Info</button>
+        <div class="hero__image"></div>
+        <div class="hero__overlay"></div>        
+        <div class="hero__text">
+            <h1 class="hero__title">Landing Page 1</h1>
+            <p class="hero__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere nam modi quia facilis blanditiis, doloremque iure quo dolore impedit deleniti praesentium quidem exercitationem, consectetur veniam ad error veritatis! Provident, alias?</p>
+            <button class="hero__button">More Info</button>
         </div>
     </section>
 </body>
