--- a/Landing_1/index.html
+++ b/Landing_1/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page 1</title>
-    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <section>
         <div class="hero__image"></div>
-        <div class="hero__overlay"></div>        
+        <div class="hero__overlay"></div>
         <div class="hero__text">
             <h1 class="hero__title">Landing Page 1</h1>
-            <p class="hero__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere nam modi quia facilis blanditiis, doloremque iure quo dolore impedit deleniti praesentium quidem exercitationem, consectetur veniam ad error veritatis! Provident, alias?</p>
+            <p class="hero__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis aliquid, impedit dignissimos quos id temporibus reiciendis atque earum nostrum ducimus blanditiis porro numquam ab a sunt iusto minus illum! In.</p>
             <button class="hero__button">More Info</button>
         </div>
     </section>
 </body>
-
 </html>
