--- a/Landing_2/index.html
+++ b/Landing_2/index.html
@@ -14,10 +14,13 @@
         <div class="hero__background__overlay"></div>
         <div class="hero__text__container">
             <h1 class="hero__title">Landing Page 2</h1>
-            <p class="hero__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex pariatur rem quos odio, facilis voluptates voluptas laboriosam assumenda earum voluptatum eaque repellendus, culpa amet quod nam facere? Commodi, necessitatibus laborum!</p>
+            <p class="hero__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia provident quae sunt deserunt, modi assumenda cumque? Illo repellendus dolor ea.</p>
             <button class="hero__button">Learn More</button>
         </div>
     </section>
 </body>
 
 </html>
+
+
+<!-- https://www.pexels.com/photo/brown-wooden-floor-172292/ -->
